salesforce_sfdx_QA/main/default/objects/Application_Required_Documents__c/fields/Application_Task__c.field-meta.xml
<CustomField>
    <fullName>Application_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Task</label>
    <referenceTo>Application_Task__c</referenceTo>
    <relationshipLabel>Application Required Documents</relationshipLabel>
    <relationshipName>Application_Required_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>