salesforce_sfdx_QA/main/default/objects/Application_Required_Documents__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <label>Long Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>